components/SplitFlapDisplay/SplitFlapDisplay.module.scss
@use "/styles/lib/mixins.scss";

.split_flap_display {
  --split-flap-crease: 1px;
  --chars-gap: 2px;
  --flip-duration: 800ms;

  display: flex;
  //filter: drop-shadow(0 1px 12px var(--color-shadow-1));
  font-size: 1.5em;
  gap: var(--chars-gap);
  position: relative;
  transform-style: preserve-3d;
  transition: transform 500ms var(--ease-out-cubic);

  @include mixins.above-medium {
    font-size: clamp(1.5em, 5vw, 3.5em);
  }

  .slot {
    display: grid;
    place-content: center;
    transform-style: preserve-3d;

    + .slot {
      position: relative;

      //&::before {
      //  background-color: var(--color-background);
      //  border-radius: 3px;
      //  content: "";
      //  height: 100%;
      //  left: calc(var(--chars-gap) * -1);
      //  position: absolute;
      //  width: var(--chars-gap);
      //  z-index: -1;
      //}
    }

    .character {
      // Calculate absolute distance from current character
      --total0: calc(var(--total) - 1);
      --offset: calc(var(--index) - var(--current-character-index));
      --abs-offset: max(var(--offset), calc(var(--offset) * -1));
      --safe-abs-offset: max(var(--abs-offset), 0.0000001); /* Prevent zero */
      --direction: calc(var(--offset) / var(--safe-abs-offset));
      //--direction: calc(var(--offset) / var(--abs-offset));
      --past: min(0, var(--direction));
      --future: max(0, var(--direction));
      --is-current: clamp(0, calc(1 - var(--abs-offset) * 1000), 1);
      --is-not-current: clamp(0, calc(1 - var(--is-current)), 1);
      --is-previous: clamp(
        0,
        calc(1 - max(var(--offset) + 1, (var(--offset) + 1) * -1) * 1000),
        1
      );
      --is-next: clamp(
        0,
        calc(1 - max(var(--offset) - 1, (var(--offset) - 1) * -1) * 1000),
        1
      );
      //--is-other: clamp(
      //  0,
      //  calc(1 - var(--is-current) - var(--is-previous) - var(--is-next)),
      //  1
      //);
      //--flip: clamp(0, var(--offset), 1);
      --angle: calc((0.5 / var(--total0)) * 1turn);
      --a: calc(
        var(--abs-offset) * var(--direction) * var(--angle) + var(--past) *
          0.5turn - var(--turn) * 1turn
      );
      --a2: calc(
        max(var(--abs-offset) - 1, 0) * var(--direction) * var(--angle) +
          var(--future) * 0.5turn - var(--turn) * 1turn
      );
      //--a2: calc(var(--abs-offset) * var(--angle) * -1);

      display: flex;
      flex-direction: column;
      gap: var(--split-flap-crease);
      grid-area: 1 / 1;
      pointer-events: none;
      position: relative;
      transform-style: preserve-3d;
      transition: z-index var(--flip-duration) var(--ease-out-cubic);
      z-index: calc(
        var(--is-current) * 2 + var(--is-previous) + var(--is-next)
      );

      &::after {
        background-color: var(--color-background);
        content: "";
        display: block;
        height: var(--split-flap-crease);
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        width: 100%;
      }

      > .flap {
        backface-visibility: hidden;
        background: var(--color-background);
        border-radius: 3px;
        box-shadow: inset 0 0 2px 0.75px var(--color-border-2),
          inset 0 0 0 1px var(--color-border-1);
        box-sizing: content-box;
        display: flex;
        height: 0.5em;
        line-height: 1;
        overflow: hidden;
        place-content: center;
        position: relative;
        transform-style: preserve-3d;
        transition: transform var(--flip-duration) var(--ease-out-cubic);
        vertical-align: middle;
        width: 1em;

        > * {
          opacity: calc(var(--is-current) * 1 + var(--is-next) * 0.5);
          transition: opacity var(--flip-duration) var(--ease-out-circ);
        }

        // Top flap - flips down
        &:first-child {
          align-items: flex-start;
          padding-top: 0.25em;
          transform: rotateX(var(--a));
          transform-origin: center calc(100% + var(--split-flap-crease) * 0.5);

          > * {
            translate: 0 calc(var(--split-flap-crease) * 0.5);
          }
        }

        // Bottom flap
        &:last-child {
          align-items: flex-end;
          padding-bottom: 0.25em;

          transform: rotateX(var(--a2));
          transform-origin: center calc(var(--split-flap-crease) * -0.5);

          > * {
            translate: 0 calc(var(--split-flap-crease) * -0.5);
          }
        }
      }
    }
  }
}

